concert-demo/blue-bank/kubernetes-manifests/gpu-cluster-manifests/vllm-coding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-coding
  namespace: bluebank
  labels:
    app: vllm-coding
spec:
  selector:
    app: vllm-coding
  ports:
  - name: http
    port: 8000
    targetPort: 8000
