concert-demo/blue-bank/kubernetes-manifests/gpu-cluster-manifests/vllm-coding/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vllm-coding-route
  namespace: bluebank
  labels:
    app: vllm-coding
spec:
  to:
    kind: Service
    name: vllm-coding
  port:
    targetPort: http
  tls:
    termination: edge
